<resources>
    <string name="app_name">Food 18</string>


    <string name="Enter_mobile_number">Enter Mobile Number</string>
    <string name="Enter_password">Enter Password</string>


    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_notification">Notifications</string>
    <string name="title_profile">Profile</string>


    <string name="title_button1">Package</string>
    <string name="title_button2">Extra</string>


    <string name="title_full_name">Full Name</string>
    <string name="title_mobile_number">Mobile Number</string>
    <string name="title_profile_address">Address</string>
    <string name="title_profile_date_of_birth">Date Of Birth</string>
    <string name="title_profile_email">Email</string>


    <string name="title_profile_gender">Gender:</string>
    <string name="title_profile_gender_male">Male</string>
    <string name="title_profile_gender_female">Female</string>
    <string name="title_profile_gender_other">Other</string>


    <string name="please_upload_your_profile_image">Upload your profile Image:</string>
    <string name="upload_profile_image">Upload Profile</string>
    <string name="upload_profile_image_profile">Upload</string>
    <string name="user_profiLe_update">Update Profile</string>

    <string name="coupons">Coupons and Vouchers</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="support">Support</string>


    <string name="title_old_password">Old Password</string>
    <string name="title_password">Set Password</string>
    <string name="title_confirm_password">Confirm Password</string>

    <string name="save_password">Save Password</string>
    <string name="update_password">Update Password</string>
    <string name="sign_out">Sign Out</string>
</resources>
