<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scrimatec.food18.Activities.Update_Password">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="18dp"
            android:id="@+id/layout_update_password">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                app:passwordToggleEnabled="true"
                android:id="@+id/materialtextimputoldpassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/old_password"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/title_old_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:paddingLeft="20dp"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/materialtextimputoldpassword"
                android:id="@+id/materialtextinputpassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/custom_change_password"
                    android:paddingStart="20dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/title_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:paddingLeft="20dp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/materialtextinputpassword"
                android:id="@+id/materialtextinputcpassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/custom_change_confirm_password"
                    android:paddingStart="20dp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="15dp"
                    android:hint="@string/title_confirm_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:paddingLeft="20dp"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_password"
                android:background="@drawable/corners"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_below="@id/materialtextinputcpassword"
                android:layout_marginTop="25dp"
                android:id="@+id/update_password"/>
        </RelativeLayout>

    </RelativeLayout>