<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".Activities.Custom_profile_edit_onclick_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_edit_profilepage">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:id="@+id/imageViewedit"
            android:src="@drawable/profile_background"
            android:scaleType="fitXY"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relative_layout_below_image_profile"
            android:layout_below="@+id/imageViewedit">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ListRelative"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/relative_details"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:layout_centerHorizontal="true">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:id="@+id/materialtextinputname">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_Full_Name"
                                android:paddingStart="20dp"
                                android:drawableLeft="@drawable/ic_person_black_24dp"
                                android:drawablePadding="15dp"
                                android:hint="@string/title_full_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                                android:paddingLeft="20dp"
                                android:maxLines="1"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="05dp"
                            android:layout_weight="1"
                            android:layout_below="@+id/materialtextinputname"
                            android:id="@+id/materialtextinputmobnumber">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/Mobile_Number"
                                android:layout_below="@+id/profile_Full_Name"
                                android:hint="@string/title_mobile_number"
                                android:inputType="number"
                                android:drawablePadding="15dp"
                                android:maxLength="10"
                                android:drawableLeft="@drawable/ic_phone_black"
                                android:paddingLeft="20dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="05dp"
                            android:layout_weight="1"
                            android:layout_marginBottom="05dp"
                            android:layout_below="@+id/materialtextinputmobnumber"
                            android:id="@+id/materialtextinputemail">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_Email"
                                android:inputType="textEmailAddress"
                                android:hint="@string/title_profile_email"
                                android:maxLines="1"
                                android:drawablePadding="15dp"
                                android:drawableLeft="@drawable/ic_email_black_24dp"
                                android:paddingLeft="20dp"
                                android:layout_below="@+id/Mobile_Number"
                                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="05dp"
                            android:layout_weight="1"
                            android:layout_marginBottom="05dp"
                            android:layout_below="@+id/materialtextinputemail"
                            android:id="@+id/materialtextinputdateofbirth">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_Date_of_birth"
                                android:inputType="date"
                                android:layout_below="@+id/profile_Email"
                                android:drawablePadding="15dp"
                                android:maxLines="1"
                                android:drawableLeft="@drawable/ic_today_date_of_birth"
                                android:paddingLeft="20dp"
                                android:hint="@string/title_profile_date_of_birth"
                                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="05dp"
                            android:layout_marginBottom="05dp"
                            android:layout_below="@+id/materialtextinputdateofbirth"
                            android:id="@+id/materialtextinputaddress">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/profile_address"
                                android:hint="@string/title_profile_address"
                                android:drawablePadding="15dp"
                                android:drawableLeft="@drawable/ic_location_on"
                                android:paddingLeft="20dp"
                                android:layout_below="@+id/profile_date_of_birth"
                                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_profile_gender"
                            android:layout_marginTop="20dp"
                            android:padding="10dp"
                            android:layout_below="@+id/materialtextinputaddress"
                            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                            android:id="@+id/title_profile_gender_selector"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title_profile_gender_selector"
                            android:id="@+id/tablayout">

                            <TableRow>

                                <RadioGroup
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_below="@id/title_profile_gender_selector"
                                   android:padding="05dp"
                                   android:layout_weight="1"
                                   android:orientation="horizontal"
                                   android:layout_centerHorizontal="true"
                                   android:id="@+id/title_profile_gender"
                                   android:layout_marginTop="5dp"
                                   android:layout_marginBottom="5dp">

                                   <RadioButton
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:gravity="center"
                                       android:layout_gravity="center"
                                       android:background="@drawable/radio_background"
                                       android:layout_weight="1"
                                       android:layout_marginLeft="2dp"
                                       android:layout_marginRight="2dp"
                                       android:text="@string/title_profile_gender_male"
                                       android:id="@+id/profile_gender_male"
                                       android:button="@android:color/transparent"
                                       android:drawablePadding="20dp"
                                       android:padding="10dp"
                                       android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

                                   <RadioButton
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_gravity="center"
                                       android:text="@string/title_profile_gender_female"
                                       android:gravity="center"
                                       android:id="@+id/profile_gender_female"
                                       android:layout_weight="1"
                                       android:background="@drawable/radio_background"
                                       android:padding="10dp"
                                       android:layout_marginLeft="2dp"
                                       android:layout_marginRight="2dp"
                                       android:button="@android:color/transparent"
                                       android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

                                   <RadioButton
                                       android:layout_width="match_parent"
                                       android:layout_marginLeft="2dp"
                                       android:layout_marginRight="2dp"
                                       android:layout_gravity="center"
                                       android:layout_weight="1"
                                       android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                                       android:padding="10dp"
                                       android:layout_height="wrap_content"
                                       android:text="@string/title_profile_gender_other"
                                       android:gravity="center"
                                       android:background="@drawable/radio_background"
                                       android:button="@android:color/transparent"
                                       android:id="@+id/profile_gender_other" />

                                </RadioGroup>

                            </TableRow>

                        </TableLayout>

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/profile_image_view_edit"
            android:src="@drawable/ic_person"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:padding="18dp"
            android:layout_marginTop="120dp"
            android:onClick="upload_registration_image"
            app:riv_border_width="2dp"
            app:riv_border_color="@android:color/darker_gray"
            app:riv_corner_radius="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_profile_user_save_button"
            android:background="@drawable/borders"
            android:text="@string/user_profiLe_update"
            android:layout_below="@+id/relative_layout_below_image_profile"
            android:onClick="Update_Profile"
            android:textColor="@color/brown"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

    </RelativeLayout>

</ScrollView>